--- a/index.html
+++ b/index.html
@@ -55,6 +55,18 @@
       font-size: 0.95rem;
       color: #555;
     }
+    .category a {
+      display: block;
+      margin-top: 0.5rem;
+      font-size: 0.85rem;
+      color: #e07a5f;
+      text-decoration: none;
+    }
+    .category img {
+      max-width: 100%;
+      border-radius: 0.5rem;
+      margin-top: 0.5rem;
+    }
     footer {
       font-size: 0.8rem;
       color: #888;
@@ -71,23 +83,48 @@
   <section class="categories">
     <div class="category">
       <h2>Cafetière</h2>
+      <img src="https://via.placeholder.com/200x150" alt="Cafetière durable">
       <p>Le modèle sélectionné pour sa durabilité, sa réparabilité et son efficacité énergétique.</p>
+      <a href="#">Acheter (lien affilié)</a>
+      <a href="#">Tuto réparation</a>
+      <a href="#">Discussion forum</a>
+      <a href="#">Indice de réparabilité</a>
     </div>
     <div class="category">
       <h2>Lave-linge</h2>
+      <img src="https://via.placeholder.com/200x150" alt="Lave-linge durable">
       <p>Appareil recommandé avec l’indice de durabilité le plus élevé et faible consommation d’eau.</p>
+      <a href="#">Acheter (lien affilié)</a>
+      <a href="#">Tuto réparation</a>
+      <a href="#">Discussion forum</a>
+      <a href="#">Indice de réparabilité</a>
     </div>
     <div class="category">
       <h2>Lampe</h2>
+      <img src="https://via.placeholder.com/200x150" alt="Lampe LED durable">
       <p>Lampe LED basse conso, remplaçable, conçue pour durer des années.</p>
+      <a href="#">Acheter (lien affilié)</a>
+      <a href="#">Tuto réparation</a>
+      <a href="#">Discussion forum</a>
+      <a href="#">Indice de réparabilité</a>
     </div>
     <div class="category">
       <h2>Smartphone</h2>
+      <img src="https://via.placeholder.com/200x150" alt="Smartphone modulaire">
       <p>Smartphone modulaire et réparable avec longue durée de vie logicielle.</p>
+      <a href="#">Acheter (lien affilié)</a>
+      <a href="#">Tuto réparation</a>
+      <a href="#">Discussion forum</a>
+      <a href="#">Indice de réparabilité</a>
     </div>
     <div class="category">
       <h2>Batterie externe</h2>
+      <img src="https://via.placeholder.com/200x150" alt="Batterie externe durable">
       <p>Compacte, à cellule remplaçable, avec matériaux recyclables.</p>
+      <a href="#">Acheter (lien affilié)</a>
+      <a href="#">Tuto réparation</a>
+      <a href="#">Discussion forum</a>
+      <a href="#">Indice de réparabilité</a>
     </div>
   </section>
 
