--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
       <h2>Cafetière</h2>
       <img src="https://via.placeholder.com/200x150" alt="Cafetière durable">
       <p>Le modèle sélectionné pour sa durabilité, sa réparabilité et son efficacité énergétique.</p>
-      <a href="#">Acheter (lien affilié)</a>
+      <a href="#">Acheter (lien affilié AWIN)</a>
       <a href="#">Tuto réparation</a>
       <a href="#">Discussion forum</a>
       <a href="#">Indice de réparabilité</a>
@@ -94,7 +94,7 @@
       <h2>Lave-linge</h2>
       <img src="https://via.placeholder.com/200x150" alt="Lave-linge durable">
       <p>Appareil recommandé avec l’indice de durabilité le plus élevé et faible consommation d’eau.</p>
-      <a href="#">Acheter (lien affilié)</a>
+      <a href="#">Acheter (lien affilié AWIN)</a>
       <a href="#">Tuto réparation</a>
       <a href="#">Discussion forum</a>
       <a href="#">Indice de réparabilité</a>
@@ -103,7 +103,7 @@
       <h2>Lampe</h2>
       <img src="https://via.placeholder.com/200x150" alt="Lampe LED durable">
       <p>Lampe LED basse conso, remplaçable, conçue pour durer des années.</p>
-      <a href="#">Acheter (lien affilié)</a>
+      <a href="#">Acheter (lien affilié AWIN)</a>
       <a href="#">Tuto réparation</a>
       <a href="#">Discussion forum</a>
       <a href="#">Indice de réparabilité</a>
@@ -112,7 +112,7 @@
       <h2>Smartphone</h2>
       <img src="https://via.placeholder.com/200x150" alt="Smartphone modulaire">
       <p>Smartphone modulaire et réparable avec longue durée de vie logicielle.</p>
-      <a href="#">Acheter (lien affilié)</a>
+      <a href="#">Acheter (lien affilié AWIN)</a>
       <a href="#">Tuto réparation</a>
       <a href="#">Discussion forum</a>
       <a href="#">Indice de réparabilité</a>
@@ -121,7 +121,7 @@
       <h2>Batterie externe</h2>
       <img src="https://via.placeholder.com/200x150" alt="Batterie externe durable">
       <p>Compacte, à cellule remplaçable, avec matériaux recyclables.</p>
-      <a href="#">Acheter (lien affilié)</a>
+      <a href="#">Acheter (lien affilié AWIN)</a>
       <a href="#">Tuto réparation</a>
       <a href="#">Discussion forum</a>
       <a href="#">Indice de réparabilité</a>
