--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
       <h2>Lave-linge</h2>
       <img src="https://via.placeholder.com/200x150" alt="Lave-linge durable">
       <p>Appareil recommandé avec l’indice de durabilité le plus élevé et faible consommation d’eau.</p>
-      <a href="#">Acheter (lien affilié AWIN)</a>
+      <a href="https://www.lg.com/fr/lavage/lave-linge/f14r15whs-lave-linge-standards/">Acheter (lien affilié AWIN)</a>
       <a href="#">Tuto réparation</a>
       <a href="#">Discussion forum</a>
       <a href="#">Indice de réparabilité</a>
