--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <style>
     body {
       margin: 0;
-      font-family: 'Helvetica Neue', sans-serif;
+      font-family: 'Ubuntu', sans-serif;
       background-color: #f4f3ee;
       color: #333;
       text-align: center;
