--- a/test.html
+++ b/test.html
@@ -8,7 +8,7 @@
     body {
       margin: 0;
       font-family: 'Helvetica Neue', sans-serif;
-      background-color: #f4f3ee;
+      background-color: #e8f0e5;
       color: #333;
       text-align: center;
     }
@@ -21,7 +21,7 @@
       align-items: center;
     }
     .logo img {
-      max-width: 120px;
+      max-width: 180px;
       height: auto;
       margin-bottom: 1rem;
     }
@@ -75,6 +75,7 @@
   <header>
     <div class="logo">
       <img src="logo.png" alt="Logo Solylos">
+      <div class="logo-text">SOLYLOS</div>
     </div>
     <h1>Un seul produit. Le meilleur.</h1>
     <p class="description">Solylos sélectionne l’objet le plus durable de chaque catégorie, pour un choix simple, éthique et éclairé.</p>
