--- a/test.html
+++ b/test.html
@@ -8,7 +8,7 @@
     body {
       margin: 0;
       font-family: 'Helvetica Neue', sans-serif;
-      background-color: #e8f0e5;
+      background-color: #f2ede0;
       color: #333;
       text-align: center;
     }
