--- a/test.html
+++ b/test.html
@@ -88,6 +88,10 @@
     <div class="category">
       <h2>Lave-linge</h2>
       <p>Appareil recommandé avec l’indice de durabilité le plus élevé et faible consommation d’eau.</p>
+      <a href="https://www.lg.com/fr/lavage/lave-linge/f14r15whs-lave-linge-standards/">Acheter (lien affilié AWIN)</a>
+      <a href="#">Tuto réparation</a>
+      <a href="#">Discussion forum</a>
+      <a href="#">Indice de réparabilité</a>
     </div>
     <div class="category">
       <h2>Lampe</h2>
