--- a/index.html
+++ b/index.html
@@ -75,8 +75,10 @@
 </head>
 <body>
   <header>
-    <div class="logo">SOLYLOS</div>
-    <h1>Un seul produit. Le meilleur.</h1>
+    <div class="logo">
+      <img src="logo.png" alt="Logo Solylos">
+    </div>
+    <h2>Un seul produit. Le meilleur.</h2>
     <p class="description">Solylos sélectionne l’objet le plus durable de chaque catégorie, pour un choix simple, éthique et éclairé.</p>
   </header>
 
