--- a/index.html
+++ b/index.html
@@ -16,6 +16,16 @@
       padding: 2rem 1rem;
     }
     .logo {
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+    }
+    .logo img {
+      max-width: 180px;
+      height: auto;
+      margin-bottom: 1rem;
+    }
+    .logo-text {
       font-size: 4rem;
       font-weight: bold;
       letter-spacing: 0.1rem;
