--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     body {
       margin: 0;
       font-family: 'Ubuntu', sans-serif;
-      background-color: #f4f3ee;
+      background-color: #f2ede0;
       color: #333;
       text-align: center;
     }
