--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
       <img src="logo.png" alt="Logo Solylos">
     </div>
     <h2>Un seul produit. Le meilleur.</h2>
-    <p class="description">Solylos sélectionne l’objet le plus durable de chaque catégorie, pour un choix simple, éthique et éclairé.</p>
+    <p class="description">Solylos sélectionne l’objet le plus durable dans chaque domaine, pour un choix simple, éthique et éclairé.</p>
   </header>
 
   <section class="categories">
