--- a/index.html
+++ b/index.html
@@ -104,6 +104,7 @@
     </div>
     <div class="category">
       <h2>Lave-linge</h2>
+      <h2>LG F14R15WHS</h2>
       <img src="https://via.placeholder.com/200x150" alt="Lave-linge durable">
       <p>Appareil recommandé avec l’indice de durabilité le plus élevé et faible consommation d’eau.</p>
       <a href="https://www.lg.com/fr/lavage/lave-linge/f14r15whs-lave-linge-standards/">Acheter (lien affilié AWIN)</a>
@@ -122,9 +123,10 @@
     </div>
     <div class="category">
       <h2>Smartphone</h2>
+      <h2>Fairphone 5</h2>
       <img src="https://via.placeholder.com/200x150" alt="Smartphone modulaire">
       <p>Smartphone modulaire et réparable avec longue durée de vie logicielle.</p>
-      <a href="#">Acheter (lien affilié AWIN)</a>
+      <a href="https://shop.fairphone.com/fr/fairphone-5">Acheter (lien affilié AWIN)</a>
       <a href="#">Tuto réparation</a>
       <a href="#">Discussion forum</a>
       <a href="#">Indice de réparabilité</a>
