--- a/index.html
+++ b/index.html
@@ -108,6 +108,7 @@
       <h2>LG F14R15WHS</h2>
       <img src="https://via.placeholder.com/200x150" alt="Lave-linge durable">
       <p>Appareil recommandé avec l’indice de durabilité le plus élevé et faible consommation d’eau.</p>
+      <previewbox-link href="https://www.lg.com/fr/lavage/lave-linge/f14r15whs-lave-linge-standards/"></previewbox-link>
       <a href="https://www.lg.com/fr/lavage/lave-linge/f14r15whs-lave-linge-standards/">Acheter (lien affilié AWIN)</a>
       <a href="#">Tuto réparation</a>
       <a href="#">Discussion forum</a>
