--- a/index.html
+++ b/index.html
@@ -128,6 +128,7 @@
       <h2>Fairphone 5</h2>
       <img src="https://via.placeholder.com/200x150" alt="Smartphone modulaire">
       <p>Smartphone modulaire et réparable avec longue durée de vie logicielle.</p>
+      <previewbox-link href="https://shop.fairphone.com/fr/fairphone-5"></previewbox-link>
       <a href="https://shop.fairphone.com/fr/fairphone-5">Acheter (lien affilié AWIN)</a>
       <a href="#">Tuto réparation</a>
       <a href="#">Discussion forum</a>
