--- a/index.html
+++ b/index.html
@@ -108,9 +108,9 @@
       <h2>LG F14R15WHS</h2>
       <img src="https://via.placeholder.com/200x150" alt="Lave-linge durable">
       <p>Appareil recommandé avec l’indice de durabilité le plus élevé et faible consommation d’eau.</p>
-      <img src="https://api.microlink.io/?url=https://www.lg.com/fr/lavage/lave-linge/f14r15whs-lave-linge-standards/&screenshot=true&meta=false" alt="Aperçu du produit LG">
-      <previewbox-link href="https://www.lg.com/fr/lavage/lave-linge/f14r15whs-lave-linge-standards/"></previewbox-link>
-      <a href="https://www.lg.com/fr/lavage/lave-linge/f14r15whs-lave-linge-standards/">Acheter (lien affilié AWIN)</a>
+      <img src="https://api.microlink.io/?url=https://www.boulanger.com/ref/1191110/&screenshot=true&meta=false" alt="Aperçu du produit LG">
+      <previewbox-link href="https://www.boulanger.com/ref/1191110"></previewbox-link>
+      <a href="https://www.boulanger.com/ref/1191110">Acheter (lien affilié AWIN)</a>
       <a href="#">Tuto réparation</a>
       <a href="#">Discussion forum</a>
       <a href="#">Indice de réparabilité</a>
