--- a/index.html
+++ b/index.html
@@ -86,6 +86,7 @@
 </head>
 <body>
   <header>
+    <h2>En cours de déploiement ...</h2>
     <div class="logo">
       <img src="logo.png" alt="Logo Solylos">
     </div>
