--- a/index.html
+++ b/index.html
@@ -111,6 +111,7 @@
       <p>Appareil recommandé avec l’indice de durabilité le plus élevé et faible consommation d’eau.</p>
       <img src="https://api.microlink.io/?url=https://www.boulanger.com/ref/1191110/&screenshot=true&meta=false" alt="Aperçu du produit LG">
       <previewbox-link href="https://www.boulanger.com/ref/1191110"></previewbox-link>
+      <previewbox-link href="https://www.auchan.fr/lg-lave-linge-hublot-f14r35whs/pr-3cac4a4f-4ed9-428e-b883-b84b2a623149"></previewbox-link>
       <a href="https://www.boulanger.com/ref/1191110">Acheter (lien affilié AWIN)</a>
       <a href="#">Tuto réparation</a>
       <a href="#">Discussion forum</a>
