--- a/index.html
+++ b/index.html
@@ -113,9 +113,9 @@
       <previewbox-link href="https://www.boulanger.com/ref/1191110"></previewbox-link>
       <previewbox-link href="https://www.auchan.fr/lg-lave-linge-hublot-f14r35whs/pr-3cac4a4f-4ed9-428e-b883-b84b2a623149"></previewbox-link>
       <a href="https://www.boulanger.com/ref/1191110">Acheter (lien affilié AWIN)</a>
-      <a href="#">Tuto réparation</a>
+      <a href="https://pieces-detachees.sogedis.fr/marque-LG-reference-F14R35WHS.htm">Pièces détachées</a>
       <a href="#">Discussion forum</a>
-      <a href="#">Indice de réparabilité</a>
+      <a href="https://www.lg.com/content/dam/channel/wcms/fr/irn/F14R35WHS_Outil_de_calcul_Lave-linge_Durabilit.pdf">Indice de réparabilité : 9.3 / 10</a>
     </div>
     <div class="category">
       <h2>Lampe</h2>
