--- a/index.html
+++ b/index.html
@@ -109,10 +109,8 @@
       <h2>LG F14R35WHS</h2>
       <img src="https://via.placeholder.com/200x150" alt="Lave-linge durable">
       <p>Appareil recommandé avec l’indice de durabilité le plus élevé et faible consommation d’eau.</p>
-      <img src="https://api.microlink.io/?url=https://www.boulanger.com/ref/1191110/&screenshot=true&meta=false" alt="Aperçu du produit LG">
-      <previewbox-link href="https://www.boulanger.com/ref/1191110"></previewbox-link>
       <previewbox-link href="https://www.auchan.fr/lg-lave-linge-hublot-f14r35whs/pr-3cac4a4f-4ed9-428e-b883-b84b2a623149"></previewbox-link>
-      <a href="https://www.boulanger.com/ref/1191110">Acheter (lien affilié AWIN)</a>
+      <a href="https://www.auchan.fr/lg-lave-linge-hublot-f14r35whs/pr-3cac4a4f-4ed9-428e-b883-b84b2a623149">Acheter (lien affilié AWIN)</a>
       <a href="https://pieces-detachees.sogedis.fr/marque-LG-reference-F14R35WHS.htm">Pièces détachées</a>
       <a href="#">Discussion forum</a>
       <a href="https://www.lg.com/content/dam/channel/wcms/fr/irn/F14R35WHS_Outil_de_calcul_Lave-linge_Durabilit.pdf">Indice de réparabilité : 9.3 / 10</a>
