--- a/index.html
+++ b/index.html
@@ -106,11 +106,11 @@
     </div>
     <div class="category">
       <h2>Lave-linge</h2>
-      <h2>LG F14R35WHS</h2>
+      <h2>LG F14X76BMST</h2>
       <img src="https://via.placeholder.com/200x150" alt="Lave-linge durable">
       <p>Appareil recommandé avec l’indice de durabilité le plus élevé et faible consommation d’eau.</p>
-      <previewbox-link href="https://www.auchan.fr/"></previewbox-link>
-      <a href="https://www.auchan.fr/lg-lave-linge-hublot-f14r35whs/pr-3cac4a4f-4ed9-428e-b883-b84b2a623149">Acheter (lien affilié AWIN)</a>
+      <previewbox-link href="https://www.auchan.fr/lg-lave-linge-hublot-11kg-1360trs-min-f14x76bmst/pr-401cdf7c-790d-4400-a5b9-70061a2319be"></previewbox-link>
+      <a href="https://www.auchan.fr/lg-lave-linge-hublot-11kg-1360trs-min-f14x76bmst/pr-401cdf7c-790d-4400-a5b9-70061a2319be">Acheter (lien affilié AWIN)</a>
       <a href="https://pieces-detachees.sogedis.fr/marque-LG-reference-F14R35WHS.htm">Pièces détachées</a>
       <a href="#">Discussion forum</a>
       <a href="https://www.lg.com/content/dam/channel/wcms/fr/irn/F14R35WHS_Outil_de_calcul_Lave-linge_Durabilit.pdf">Indice de réparabilité : 9.3 / 10</a>
