--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
     </div>
     <div class="category">
       <h2>Lave-linge</h2>
-      <h2>LG F14X76BMST</h2>
+      <h2>Exemple pour test : LG F14X76BMST</h2>
       <img src="https://via.placeholder.com/200x150" alt="Lave-linge durable">
       <p>Appareil recommandé avec l’indice de durabilité le plus élevé et faible consommation d’eau.</p>
       <previewbox-link href="https://www.auchan.fr/lg-lave-linge-hublot-11kg-1360trs-min-f14x76bmst/pr-401cdf7c-790d-4400-a5b9-70061a2319be"></previewbox-link>
